--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,8 @@
-AddKeysToAgent yes
-ForwardAgent no
-IdentitiesOnly yes
-Include ~/.ssh/config.d/*
+Host mi.lan
+    HostName 192.168.178.115
+    User jhuebner
+    ProxyJump 192.168.84.2
+
+Host 192.168.84.2
+    HostName 192.168.84.2
+    User janolehuebner
