feat(brew): add homebrew quirks for truenas

--- a/.environment.d/path.env
+++ b/.environment.d/path.env
@@ -1,6 +1,10 @@
-# Add directories to PATH
-export PATH="/opt/homebrew/bin:$PATH"
 export PATH="$HOME/.local/bin:$PATH"
-export PATH="$HOME/Library/Python/3.9/bin:$PATH"
 export PATH="$HOME/.cargo/bin:$PATH"
 export PATH="$HOME/bin:$PATH"
+if uname -r | grep -qi "truenas"; then
+  export PATH="/home/linuxbrew/.linuxbrew/bin:$PATH"
+elif [[ "$OSTYPE" == darwin* ]]; then
+  export PATH="/opt/homebrew/bin:$PATH"
+  export PATH="$HOME/Library/Python/3.9/bin:$PATH"
+fi
+
